Fix Colab link formatting in demo notebook

--- a/ClothingGAN_Demo.ipynb
+++ b/ClothingGAN_Demo.ipynb
@@ -6,7 +6,8 @@
         "id": "Bm8iDDKC1LZo"
       },
       "source": [
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Anutri03/ClothingGAN-master/blob/main/ClothingGAN_Demo.ipynb)\n",
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/Anutri03/ClothingGAN/blob/master/ClothingGAN_Demo.ipynb\n",
+        ")\n",
         "# Clothing GAN demo\n",
         "\n",
         "\n",
